[project]
name = "behavioral-data-pipeline"
version = "0.1.0"
description = "Microservice architecture for extracting and normalizing user behavioral timelines from SPAs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "tabulate>=0.9.0",
]

[tool.uv]
# Configuración específica para el gestor Astral UV si es necesaria